@@ -27,6 +27,9 @@ Zope Changes
 
     Bugs Fixed
 
+      - OFS Image: Image and File now both support simple unicode objects
+        for data (they function the same as strings for data).
+
       - Collector #2122: fixed missing is_proxying_match definition
         in ZServer/HTTPServer
 
